# scavenger-hunt

./: Dockerfile  README.md  db.sqlite3  docker-compose-prod.yaml  docker-compose-stage.yaml  docker-compose.yaml  entrypoint.sh  initial.sql  manage.py  mypy.ini  nginx.conf  pyproject.toml
scavengerHunt/: admin.py  asgi.py  celery.py  forms.py  models.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
scavengerHunt/management/commands/: initadmin.py  start.py
scavengerHunt/migrations/: 0001_initial.py  0002_task_alter_botuserstate_state_and_more.py  0003_alter_team_unique_team_id.py
scavengerHunt/src/: api.py  bot.py  database.py  keyboards.py
scavengerHunt/src/handlers/: test_logic.py
shelbyBot/: admin.py  asgi.py  celery.py  forms.py  models.py  settings.py  tasks.py  urls.py  wsgi.py
shelbyBot/migrations/: 0001_initial.py
shelbyBot/src/: api.py
