[tool.poetry]
name = "scavengerhunt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
pytelegrambotapi = "^4.16.1"
django-jazzmin = "^2.6.0"
psycopg2 = "^2.9.9"
mypy = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
